Start adding support for android, asynchronous processing